fix: apply dark mode to our components

--- a/packages/core/base.css
+++ b/packages/core/base.css
@@ -88,7 +88,7 @@
     --scrollbar-thumb-hover: rgba(0, 0, 0, 0.6);
   }
 
-  .dark:root {
+  :root .dark {
     --neutral-0: theme("colors.grey.100");
     --neutral-2: theme("colors.grey.0");
     --neutral-5: theme("colors.white.5");
